# tiratiivistys

./: .coveragerc  .gitignore  README.md  compare.py  pyproject.toml
.github/workflows/: main.yaml
course/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/tiratiivistys/: __main__.py  bit_io.py  classes.py  compressor.py  constants.py  user_interface.py
src/tiratiivistys/huffman/: __init__.py  decoder.py  encoder.py  huffman.py  io.py  node.py  node_queue.py  tree.py
src/tiratiivistys/lempel_ziv/: __init__.py  decoder.py  dictionary.py  encoded_range.py  encoder.py  io.py  lempel_ziv.py  token.py  window.py
tests/: helpers.py  test_bit_io.py  test_compressor.py  test_dictionary.py  test_encoded_range.py  test_huffman.py  test_io.py  test_lempel_ziv.py  test_lempel_ziv_encoder.py  test_node.py  test_token.py  test_tree.py  test_user_interface.py  test_window.py  testfile.txt
