[tool.poetry]
name = "tiratiivistys"
version = "0.1.0"
description = ""
authors = ["Joonas Somero <joonas.somero@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
