[tool.poetry]
name = "tiratiivistys"
version = "0.1.0"
description = ""
authors = ["Joonas Somero <joonas.somero@helsinki.fi>"]
readme = "README.md"
packages = [{include = "tiratiivistys", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "8.1.7"
bitstring = "4.1.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
coverage = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
